Nova atualização do projeto 2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a href="#staff" class="nav__link">Escolhas da Equipe</a>
             </li>
             <li>
-              <a class="nav__link">Eventos</a>
+              <a href="#event" class="nav__link">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Seja um membro</a>
@@ -131,7 +131,7 @@
           </ul>
         </section>
 
-        <section class="events">
+        <section class="events" id="event">
           <div class="events__content">
             <h2 class="events__heading">Próximos eventos:</h2>
             <h3 class="events__title">
