Nova atualização do projeto 3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a href="#staff" class="nav__link">Escolhas da Equipe</a>
             </li>
             <li>
-              <a href="#event" class="nav__link">Eventos</a>
+              <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Seja um membro</a>
@@ -131,7 +131,7 @@
           </ul>
         </section>
 
-        <section class="events" id="event">
+        <section class="events" id="events">
           <div class="events__content">
             <h2 class="events__heading">Próximos eventos:</h2>
             <h3 class="events__title">
@@ -172,53 +172,48 @@
           <div class="events__cover">
             <img src="./images/cafe.png" alt="cafe" class="events__image" />
 
-            <div class="person" class="person_name_feynman">
+            <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
               <img
                 src="/images/person_feynman.png"
-                alt="feynman"
-                class="person__image"
-                class="person__image_size_l"
+                alt="Joan Feynman"
+                class="person__image person__image_size_l"
               />
             </div>
 
-            <div class="person" class="person_name_burbidge">
+            <div class="person person_name_burbidge">
               <p class="person__caption">Margaret Burbidge</p>
               <img
                 src="/images/person_burbidge.png"
-                alt="burbidge"
-                class="person__image"
-                class="person__image_size_m"
+                alt="Margaret Burbidge"
+                class="person__image person__image_size_m"
               />
             </div>
 
-            <div class="person" class="person_name_cannon">
+            <div class="person person_name_cannon">
               <img
                 src="/images/person_cannon.png"
-                alt="cannon"
-                class="person__image"
-                class="person__image_size_m"
+                alt=" Annie Jump Cannon"
+                class="person__image person__image_size_m"
               />
               <p class="person__caption">Annie Jump Cannon</p>
             </div>
 
-            <div class="person" class="person_name_mitchell">
+            <div class="person person_name_mitchell">
               <img
                 src="/images/person_mitchell.png"
-                alt="mitchell"
-                class="person__image"
-                class="person__image_size_s"
+                alt="Maria Mitchell"
+                class="person__image person__image_size_s"
               />
               <p class="person__caption">Maria Mitchell</p>
             </div>
 
-            <div class="person" class="person_name_tarter">
+            <div class="person person_name_tarter">
               <p class="person__caption">Jill Tarter</p>
               <img
                 src="/images/person_tarter.png"
-                alt="tarter"
-                class="person__image"
-                class="person__image_size_m"
+                alt="Jill Tarter"
+                class="person__image person__image_size_m"
               />
             </div>
           </div>
